relay-server/src/metrics_extraction/snapshots/relay_server__metrics_extraction__event__tests__extract_span_metrics_ga_modules.snap
---
source: relay-server/src/metrics_extraction/event.rs
expression: metrics
---
[
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SeLeCt column FROM tAbLe WHERE id IN (%s)",
            "span.domain": "table",
            "span.group": "f4a7fef06db3d88e",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SeLeCt column FROM tAbLe WHERE id IN (%s)",
            "span.domain": "table",
            "span.group": "f4a7fef06db3d88e",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "select column FROM table WHERE id IN (%s)",
            "span.domain": "table",
            "span.group": "4f9711d2d09963b9",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "select column FROM table WHERE id IN (%s)",
            "span.domain": "table",
            "span.group": "4f9711d2d09963b9",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.description": "INSERT INTO from_date (..) VALUES (%s)",
            "span.domain": "from_date",
            "span.group": "e4ea457c8e7e4109",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.description": "INSERT INTO from_date (..) VALUES (%s)",
            "span.domain": "from_date",
            "span.group": "e4ea457c8e7e4109",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "INSERT",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SELECT * FROM table WHERE id IN (val)",
            "span.domain": "table",
            "span.group": "03cb381cee3f1463",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SELECT * FROM table WHERE id IN (val)",
            "span.domain": "table",
            "span.group": "03cb381cee3f1463",
            "span.module": "db",
            "span.op": "db.sql.query",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SELECT col FROM table WHERE col = %s",
            "span.domain": "table",
            "span.group": "e0f7e81a59b030ba",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SELECT",
            "span.category": "db",
            "span.description": "SELECT col FROM table WHERE col = %s",
            "span.domain": "table",
            "span.group": "e0f7e81a59b030ba",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "postgresql",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "DELETE",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "DELETE",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "UPDATE",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "UPDATE",
            "span.category": "db",
            "span.domain": "table",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SAVEPOINT",
            "span.category": "db",
            "span.description": "SAVEPOINT %s",
            "span.group": "3f955cbde39e04b9",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction": "gEt /api/:version/users/",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
    Bucket {
        timestamp: UnixTimestamp(1597976302),
        width: 0,
        name: "d:spans/exclusive_time_light@millisecond",
        value: Distribution(
            [
                2000.0,
            ],
        ),
        tags: {
            "environment": "fake_environment",
            "http.status_code": "500",
            "span.action": "SAVEPOINT",
            "span.category": "db",
            "span.description": "SAVEPOINT %s",
            "span.group": "3f955cbde39e04b9",
            "span.module": "db",
            "span.op": "db",
            "span.status": "ok",
            "span.system": "mydatabase",
            "transaction.method": "POST",
            "transaction.op": "myop",
        },
    },
]
